centering issues resolved on smaller screen for hero secition

--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,7 @@ line-height: 1.6;
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 100px 0 50px;
   background: none;
   box-sizing: border-box;
@@ -312,7 +313,7 @@ line-height: 1.6;
   }
   
   .project-hero-text {
-    padding: 1.5rem 1.5rem;
+    padding: 2.2rem 2.2rem; /* Force padding */
     max-width: 100%;
     margin: 1.3rem 0 0 0;
     border-radius: 18px;
@@ -337,7 +338,7 @@ line-height: 1.6;
   }
   
   .project-hero-text {
-    padding: 1.5rem 2rem; 
+    padding: 2rem 2rem; /* Force padding */
     border-radius: 13px;
     margin: 1.1rem 0 0 0;
   }
